--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
 * {
   box-sizing: border-box;
 }
+img {
+  max-width: 100%;
+}
 body {
   background-color: #20202d;
   margin: 0;
@@ -9,6 +12,7 @@ body {
 }
 
 .container {
+  width: 98%;
   margin: auto;
   max-width: 945px;
 }
@@ -116,7 +120,7 @@ body {
   justify-content: space-between;
 }
 
-.featutes-item {
+.features-item {
   flex-basis: 30%;
   margin-bottom: 63px;
 }
@@ -204,14 +208,14 @@ body {
 .projects-bullet {
   width: 10px;
   height: 10px;
-  border: 2px solid #FFBB01;
+  border: 2px solid #ffbb01;
   border-radius: 50%;
   display: inline-block;
   margin-right: 10px;
 }
 
 .projects-bullet-active {
-  background: #FFBB01;
+  background: #ffbb01;
 }
 
 .project-paragraph {
@@ -320,4 +324,143 @@ body {
   line-height: 18px;
   text-decoration-line: underline;
   color: #a5a5a5;
+}
+
+/* responsive */
+@media (max-width: 1100px) {
+  .hero-avatar {
+    width: 300px;
+    height: 300px;
+    border-width: 10px;
+  }
+}
+
+@media (max-width: 836px) {
+  .hero-content {
+    flex-direction: column;
+    justify-content: center;
+  }
+  .hero-avatar {
+    order: 0;
+    margin-bottom: 17px;
+    width: 300px;
+    height: 300px;
+    border-width: 10px;
+  }
+  .hero-text {
+    order: 1;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .features-item {
+    flex-basis: 45%;
+  }
+  .project-slider {
+    flex-direction: column;
+  }
+  .project-image {
+    margin-bottom: 46px;
+  }
+  .contacts-block {
+    align-items: flex-start;
+    flex-direction: column;
+  }
+  .contacts-form {
+    margin-bottom: 50px;
+  }
+}
+@media (max-width: 568px) {
+  .container {
+    width: 93%;
+  }
+  .hero {
+    padding-bottom: 75px;
+  }
+  .hero-avatar {
+    width: 113px;
+    height: 113px;
+    border-width: 4px;
+    background-size: 150%;
+    background-position: center top;
+  }
+  .hero-header {
+    margin-bottom: 38px;
+  }
+  .social-link {
+    margin-left: 5px;
+  }
+  .hero-title {
+    font-size: 24px;
+    line-height: 28px;
+  }
+  .hero-subtitle {
+    font-size: 16px;
+    line-height: 27px;
+    margin-bottom: 5px;
+  }
+  .hero-description {
+    font-size: 14px;
+    line-height: 140%;
+  }
+  .section {
+    padding: 60px 0;
+  }
+  .section-title {
+    font-size: 19px;
+    line-height: 22px;
+    margin-bottom: 60px;
+    text-align: center;
+  }
+  .features-item {
+    flex-basis: 100%;
+    margin-bottom: 30px;
+  }
+  .features-title {
+    font-size: 18px;
+    line-height: 28px;
+  }
+  .featutes-text {
+    font-size: 14px;
+    line-height: 28px;
+  }
+  .project-title {
+    font-size: 18px;
+    line-height: 150%;
+  }
+  .project-time,
+  .project-cost,
+  .project-feedback {
+    flex-basis: 100%;
+    margin-bottom: 30px;
+  }
+  .project-paragraph {
+    font-size: 14px;
+  }
+  .contacts-form {
+    padding: 40px 19px;
+  }
+  .form-title {
+    font-size: 15px;
+    line-height: 140%;
+  }
+  .form-button {
+    font-size: 10px;
+  }
+  .contacts-phone,
+  .contacts-mail {
+    flex-basis: 100%;
+    margin-bottom: 30px;
+  }
+  .contacts-title {
+    font-size: 18px;
+    line-height: 21px;
+  }
+  .contacts-link {
+    font-size: 14px;
+    line-height: 16px;
+    display: block;
+    margin-bottom: 13px;
+  }
 }
